# senitel-env

./: .gitignore  AUDIT_FINDINGS.md  CLEAN_DEPLOYMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FIX_SUMMARY.md  HF_SETUP_FINAL.md  HF_SPACES_DEPLOYMENT.md  IMPROVEMENTS_SUMMARY.md  LICENSE  QUICK_REFERENCE.md  README.md  ROUND1_DEPLOYMENT_GUIDE.md  SUBMISSION_CHECKLIST.md  benchmark_results.json  commit_changes.bat  commit_changes.ps1  demo.py  env.py  generate_benchmark.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_score_bounds.py
server/: __init__.py  app.py
tests/: test_env_tasks.py  test_smoke.py
