[project]
name = "sentinel-log-shield"
version = "1.0.0"
description = "OpenEnv environment for log PII redaction"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
